--- a/public/index.html
+++ b/public/index.html
@@ -5,16 +5,14 @@
     <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
-    <meta
-      name="description"
-      content="Web site created using create-react-app"
-    />
+    <meta name="description" content="Web site created using create-react-app" />
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
     <!--
       manifest.json provides metadata used when your web app is installed on a
       user's mobile device or desktop. See https://developers.google.com/web/fundamentals/web-app-manifest/
     -->
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
+
     <!--
       Notice the use of %PUBLIC_URL% in the tags above.
       It will be replaced with the URL of the `public` folder during the build.
@@ -24,7 +22,21 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-    <title>React App</title>
+    <link rel="stylesheet" href="%PUBLIC_URL%/assets/css/bootstrap.min.css" />
+    <link
+      rel="stylesheet"
+      href="https://fonts.googleapis.com/css?family=Nunito:200,200i,300,300i,400,400i,600,600i,700,700i,800,800i,900,900i" />
+    <link rel="stylesheet" href="%PUBLIC_URL%/assets/css/ready.css" />
+    <link rel="stylesheet" href="%PUBLIC_URL%/assets/css/demo.css" />
+    <title>MediCare</title>
+    <script>
+      window.addEventListener("error", function (e) {
+        // prevent React's listener from firing
+        e.stopImmediatePropagation();
+        // prevent the browser's console error message
+        e.preventDefault();
+      });
+    </script>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
@@ -39,5 +51,20 @@
       To begin the development, run `npm start` or `yarn start`.
       To create a production bundle, use `npm run build` or `yarn build`.
     -->
+    <script src="%PUBLIC_URL%/assets/js/core/jquery.3.2.1.min.js"></script>
+    <script src="%PUBLIC_URL%/assets/js/plugin/jquery-ui-1.12.1.custom/jquery-ui.min.js"></script>
+    <script src="%PUBLIC_URL%/assets/js/core/popper.min.js"></script>
+    <script src="%PUBLIC_URL%/assets/js/core/bootstrap.min.js"></script>
+    <script src="%PUBLIC_URL%/assets/js/plugin/chartist/chartist.min.js"></script>
+    <script src="%PUBLIC_URL%/assets/js/plugin/chartist/plugin/chartist-plugin-tooltip.min.js"></script>
+    <script src="%PUBLIC_URL%/assets/js/plugin/bootstrap-notify/bootstrap-notify.min.js"></script>
+    <script src="%PUBLIC_URL%/assets/js/plugin/bootstrap-toggle/bootstrap-toggle.min.js"></script>
+    <script src="%PUBLIC_URL%/assets/js/plugin/jquery-mapael/jquery.mapael.min.js"></script>
+    <script src="%PUBLIC_URL%/assets/js/plugin/jquery-mapael/maps/world_countries.min.js"></script>
+    <script src="%PUBLIC_URL%/assets/js/plugin/chart-circle/circles.min.js"></script>
+    <script src="%PUBLIC_URL%/assets/js/plugin/jquery-scrollbar/jquery.scrollbar.min.js"></script>
+    <script src="%PUBLIC_URL%/assets/js/ready.min.js"></script>
+    <script src="%PUBLIC_URL%/assets/js/demo.js"></script>
   </body>
 </html>
+
